# idsp

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: ci.yml
benches/: micro.rs
dsp-fixedpoint/: CHANGELOG.md  Cargo.toml  README.md
dsp-fixedpoint/src/: format.rs  lib.rs  num_traits_impl.rs  ops.rs  serde.rs
dsp-process/: CHANGELOG.md  Cargo.toml  README.md
dsp-process/src/: adapters.rs  basic.rs  block.rs  compose.rs  containers.rs  lib.rs  process.rs  split.rs  view.rs
examples/: ddc_lockin.rs  fm_disc.rs  polyphase_channelizer.rs
idsp-config/: CHANGELOG.md  Cargo.toml
idsp-config/src/: lib.rs
py/idsp/: __init__.py
src/: accu.rs  atan2.rs  build.rs  cic.rs  complex.rs  cordic.rs  cossin.rs  dither.rs  dsm.rs  filter.rs  fir_int.rs  hbf.rs  iir.rs  iir_int.rs  lib.rs  lockin.rs  lowpass.rs  num.rs  pll.rs  process.rs  py.rs  q.rs  rpll.rs  svf.rs  sweptsine.rs  testing.rs  tools.rs  unwrap.rs
src/iir/: biquad.rs  coefficients.rs  config.rs  error.rs  mod.rs  normal.rs  pid.rs  process.rs  repr.rs  response.rs  sos.rs  wdf.rs
tests/embedded/: Cargo.toml  README.md  build.rs  link_ram.x  memory.x
tests/embedded/.cargo/: config.toml
tests/embedded/src/: lib.rs
