[workspace]
members = ["dsp-fixedpoint", "dsp-process", "."]
default-members = ["dsp-fixedpoint", "dsp-process", "."]

[workspace.package]
edition = "2024"
authors = ["Robert Jördens <rj@quartiq.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/quartiq/idsp"

[workspace.dependencies]
dsp-process = { version = "0.3.0", path = "dsp-process" }
dsp-fixedpoint = { version = "0.2.0", path = "dsp-fixedpoint" }
num-traits = { version = "0.2.14", features = [
    "libm",
], default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_compatibility = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
missing_docs = "warn"

[package]
name = "idsp"
version = "0.21.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DSP algorithms for embedded, mostly integer math"
homepage = "https://github.com/quartiq/idsp"
documentation = "https://docs.rs/idsp"

[lints]
workspace = true

[dependencies]
dsp-process.workspace = true
dsp-fixedpoint.workspace = true
num-traits.workspace = true
bytemuck = { version = "1.24.0", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
miniconf = { version = "0.21.0", default-features = false, features = [
    "derive",
    "meta-node",
    "meta-edge",
], optional = true }
pyo3 = { version = "0.27.1", features = ["extension-module"], optional = true }
numpy = { version = "0.27", optional = true }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.9.1"
rustfft = "6.1.0"
# futuredsp = "0.0.6"
# sdr = "0.7.0"
log = "0.4"
bytemuck = "1.24.0"

[features]
serde = ["dep:serde", "dsp-fixedpoint/serde"]
bytemuck = ["dep:bytemuck"]
miniconf = ["dep:miniconf", "serde"]
std = []
py = ["dep:pyo3", "dep:numpy", "std"]

#[profile.release]
#opt-level = 3

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true
