[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "idsp"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "py"
module-name = "idsp._idsp"
cargo-extra-args = "--features py"
