[package]
name = "dsp-fixedpoint"
description = "Fixed point types for DSP"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.85"
keywords = ["dsp", "fixed-point", "no-std", "embedded"]
categories = ["embedded", "mathematics", "no-std"]

[features]
default = ["serde"]
std = []
serde = ["dep:serde"]

[dependencies]
num-traits = { workspace = true, default-features = false }
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
], optional = true }

[lints]
workspace = true
