[package]
name = "dsp-process"
description = "Composable no_std DSP processing traits and adapters for split config/state pipelines"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["dsp", "embedded", "no-std", "filter", "pipeline"]
categories = ["embedded", "no-std", "science"]

[features]
std = []

[dev-dependencies]
dsp-fixedpoint.workspace = true

[lints]
workspace = true
