[package]
name = "dsp-process"
description = "Composable no_std DSP processing traits and adapters for split config/state pipelines"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["dsp", "embedded", "no-std", "filter", "pipeline"]
categories = ["embedded", "no-std", "science"]

[features]
bytemuck = ["dep:bytemuck"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["min_const_generics"], optional = true }

[dev-dependencies]
dsp-fixedpoint.workspace = true

[lints]
workspace = true

[package.metadata."docs.rs"]
all-features = true
