[package]
name = "idsp-config"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Control-plane configuration types for idsp"
homepage = "https://github.com/quartiq/idsp"
documentation = "https://docs.rs/idsp-config"

[lints]
workspace = true

[dependencies]
idsp = { version = "0.21.0", path = "..", features = ["serde"] }
miniconf = { version = "0.21.0", default-features = false, features = [
    "derive",
    "meta-node",
    "meta-edge",
] }
num-traits.workspace = true
serde = { version = "1.0", features = ["derive"], default-features = false }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
