[package]
name = "idsp-embedded-bench"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace]

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", default-features = false }
defmt = "1.0.1"
defmt-rtt = { version = "1.0.0", optional = true }
defmt-semihosting = { version = "0.3.0", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
panic-semihosting = { version = "0.6.0", optional = true }
cortex-m-semihosting = { version = "0.5", optional = true }

idsp = { version = "0.21", path = "../.." }
dsp-process = { version = "0.2", path = "../../dsp-process" }
dsp-fixedpoint = { version = "0.1", path = "../../dsp-fixedpoint" }

biquad = "0.5.0"
num-traits = { version = "0.2.19", default-features = false }

[profile.dev]
debug = 'full'
opt-level = 's'

[profile.release]
debug = 'full'
codegen-units = 1
incremental = false
lto = true
opt-level = 2

[features]
rtt = ["dep:defmt-rtt", "dep:panic-probe"]
semihosting = ["dep:defmt-semihosting", "dep:panic-semihosting", "dep:cortex-m-semihosting"]
default = ["rtt"]
